# TuneGuesser

./: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
src/: App.scss  App.tsx  Audio.tsx  Controller.scss  Controller.tsx  Deepseek.tsx  Dnd.scss  Dnd.tsx  Footer.scss  Footer.tsx  Info.scss  Info.tsx  MainContent.scss  MainContent.tsx  New.scss  New.tsx  Player.scss  Player.tsx  Progressbar.scss  Progressbar.tsx  Sidebar.scss  Sidebar.tsx  Visual.scss  Visual.tsx  Volume.scss  Volume.tsx  index.scss  index.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/src/: cmd.rs  controller.rs  decode.rs  main.rs  other.rs  output.rs  resampler.rs  state.rs  test.rs
src/atoms/: index.ts
src/entity/: index.ts
src/path/: login-main.tsx  login.html  login.tsx  preload.js
