[package]
name = "tauri-react-example"
version = "0.1.2"
description = "A Tauri App"
authors = [ "you" ]
license = "Apache-2.0 OR MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }
bindgen = "0.69.4"
cc = "1.0.100"

[dependencies]
libloading = "0.7"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.5.2", features = [ "macos-private-api", "api-all"] }
rodio = "0.17.3"
symphonia = "0.5.2"
lofty = "0.16.1"
log = "0.4.20"
rb = "0.4.1"
cpal = "0.13.3"
rubato = "0.12.0"
arrayvec = "0.7.1"
crossbeam = "0.8.4"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
reqwest = { version = "0.11.23", features = ["json"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
once_cell = "1.19.0"
rand = "0.8.5"
m3u = "1.0.0"
hls_m3u8 = "0.4.1"
napi-derive = "2.12.2"
napi = "2.16.2"
use = "0.0.1-pre.0"
tauri-plugin-deep-link = "0.1.2"
tauri-plugin-localhost = "0.1.0"
tauri-plugin-oauth = "0.0.0-alpha.0"
tauri-invoke-http = { git = "https://github.com/tauri-apps/tauri-invoke-http", branch = "dev" }
httparse = "1.8.0"
tokio-tungstenite = "0.23.0"
futures-channel = "0.3.30"
futures-util = "0.3.30"
libc = "0.2.155"
hex = "0.4.3"
bytes = "1.9.0"
base64 = "0.22.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
